force-app/main/default/objects/copado__Release__c/fields/copado__Artifact_User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__Artifact_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automatically populated with the User Story generated when you click &apos;Create Artifact&apos;. If a User Story is already linked here when the button is clicked, Copado will automatically recreate its feature branch and metadata to match the release branch.</inlineHelpText>
    <label>Artifact User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>