force-app/main/default/objects/copado__Release__c/fields/copado__Base_Branch__c.field-meta.xml
<CustomField>
    <fullName>copado__Base_Branch__c</fullName>
    <description>All user story feature branches are created out of the main branch of the Deployment Flow. If a Release base branch is specified, all feature branches of user stories linked to the Release will be created out of the base branch.</description>
    <inlineHelpText>All user story feature branches are created out of the main branch of the Deployment Flow. If a Release base branch is specified, all feature branches of user stories linked to the Release will be created out of the base branch.</inlineHelpText>
    <label>Base Branch</label>
    <length>180</length>
    <type>Text</type>
</CustomField>