force-app/main/default/objects/copado__Release__c/fields/copado__Base_Branch_Origin__c.field-meta.xml
<CustomField>
    <fullName>copado__Base_Branch_Origin__c</fullName>
    <inlineHelpText>Specify the parent branch from which this release branch was created. Copado uses this to calculate diffs, identifying exactly which components were modified so that validations, deployments, and artifact user stories are created accurately.</inlineHelpText>
    <label>Base Branch Origin</label>
    <length>180</length>
    <type>Text</type>
</CustomField>