force-app/main/default/objects/copado__Release__c/fields/copado__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__Completion_Date__c</fullName>
    <inlineHelpText>Update this date when the release is complete.</inlineHelpText>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>