force-app/main/default/objects/copado__Release__c/fields/copado__Environment__c.field-meta.xml
<CustomField>
    <fullName>copado__Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The target integration environment where the release branch content is validated or deployed. It serves as the starting point for the Artifact User Story and is automatically assigned to it upon creation.</inlineHelpText>
    <label>Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>