force-app/main/default/objects/copado__Release__c/fields/copado__Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__Planned_Date__c</fullName>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>