force-app/main/default/objects/copado__Release__c/fields/copado__Testing_Completed__c.field-meta.xml
<CustomField>
    <fullName>copado__Testing_Completed__c</fullName>
    <inlineHelpText>Update this date when all the Testing activities are completed.</inlineHelpText>
    <label>Testing Completed</label>
    <type>DateTime</type>
</CustomField>