force-app/main/default/objects/copado__Release__c/fields/copado__Version__c.field-meta.xml
<CustomField>
    <fullName>copado__Version__c</fullName>
    <description>When a Promotion linked to this Release is merged into the Main Branch of the deployment flow, Copado will tag the Main Branch with this version number. This value is typically a major (e.g. v7), minor (v7.3) or patch (v7.3.2) release.</description>
    <inlineHelpText>When a Promotion linked to this Release is merged into the Main Branch of the deployment flow, Copado will tag the Main Branch with this version number. This value is typically a major (e.g. v7), minor (v7.3) or patch (v7.3.2) release.</inlineHelpText>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>