force-app/main/default/objects/copado__Release__c/fields/copadoconnect__Pipeline_definition__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Pipeline_definition__c</fullName>
    <label>Pipeline definition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>