force-app/main/default/objects/copado__Release__c/validationRules/copado__Validate_spaces_in_version.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Validate_spaces_in_version</fullName>
    <active>true</active>
    <description>Make sure no spaces are there in version field</description>
    <errorConditionFormula>CONTAINS(copado__Version__c,&quot; &quot;)</errorConditionFormula>
    <errorDisplayField>copado__Version__c</errorDisplayField>
    <errorMessage>please dont include spaces in version field</errorMessage>
</ValidationRule>