force-app/main/default/objects/copado__Release__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Version__c</columns>
    <columns>copado__Planned_Date__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Base_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>